# E-commerce

./: README.md  pyproject.toml
src/: category.py
tests/: conftest.py  test_category.py
